# python-project-50

./: .coverage  .gitignore  Makefile  README.md  coverage.xml  demo.cast  demo.cast1  demo.cast2  demo.cast3  demo.cast4  demo.cast5  demo.cast6  pyproject.toml  sonar-project.properties  test_output.txt
.github/workflows/: python-ci.yml  sonarcloud.yml
gendiff/: __init__.py  cli.py  diff.py  differ.py  parsers.py
gendiff/formatters/: stylish.py
gendiff/scripts/: gendiff.py
hexlet_code.egg-info/: PKG-INFO  SOURCES.txt
tests/: test_diff.py  test_formaters.py
