[build-system]
requires = ["hatchling>=1.0.0"]
build-backend = "hatchling.build"

[project]
name = "hexlet-code"
version = "0.1.0"
description = "Compares two configuration files and shows a difference."
readme = "README.md"
requires-python = ">=3.8"
authors = [
    {name = "Ilya Lysenkov", email = "lysenkov_iv21@mail.ru"},
]
dependencies = [
    "PyYAML>=6.0",
]

[project.scripts]
gendiff = "gendiff.scripts.gendiff:main"

[tool.hatch.envs.default]
dependencies = [
    "pytest>=7.0",
    "pytest-cov",
    "flake8"
]

[tool.hatch.envs.default.scripts]
lint = "flake8 gendiff tests"
test = "pytest -v --cov=gendiff"

[tool.hatch.build.targets.wheel]
packages = ["gendiff"]
